--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "capstone",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
+    
+  
+  
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -13,6 +16,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.4",
     "mongoose": "^6.7.2",
     "nodemon": "^2.0.20",
     "router": "^1.3.7"
